# esp32_lora_watering

./: .gitignore  AGENTS.md  CMakeLists.txt  LEARNING_LOG.md  LICENSE  MICROWORLD_ROADMAP.md  README.md  clang-format  partitions.csv  platformio.ini  sdkconfig.defaults
.claude/concepts/: engine-net-wiring.md  esp32-lora-remote-controller-learning-redesign.md  esp32-remote-controller-tutorial.md  microworld-framework.md  microworld-mini-engine-roadmap.md  net-host-roles.md  platform-host-udp.md  portable-remote-controller-hourly-curriculum.md
.claude/plans/: esp32-lora-remote-controller-learning-redesign.md  esp32-remote-controller-tutorial.md  microworld-framework.md  (+2 more)
docs/: esp32-lora-remote-controller-learning-guide.md  esp32-lora-watering-daily-guide.md
lib/: AGENTS.md
lib/microworld/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  PROGRESS.md  README.md  library.json
lib/microworld-engine/: AGENTS.md  CMakeLists.txt  README.md  library.json
lib/microworld-engine/benchmarks/Results/: Esp32S3N16R8.md  Host.md
lib/microworld-engine/examples/HostLifecycle/: Main.cpp
lib/microworld-engine/include/MicroWorld/Engine/: Actor.h  ActorComponent.h  EngineClassIds.h  EngineHost.h  EngineRegistryView.h  EngineResult.h  EngineStorage.h  InlineTypes.h  NetworkFrame.h  Timer.h  World.h
lib/microworld-engine/src/: Actor.cpp  ActorComponent.cpp  World.cpp
lib/microworld-engine/tests/: EngineAllocationCounters.cpp  EngineAllocationCounters.h  EngineGarbageCollectionTests.cpp  EngineHostTests.cpp  EngineInlineTypesTests.cpp  EngineLifecycleTests.cpp  EngineNetHostTests.cpp  EngineRegistrationTests.cpp  EngineSpawnDestroyTests.cpp  EngineTestSupport.h  EngineTimerManagerTests.cpp
lib/microworld-memory/: AGENTS.md  CMakeLists.txt  library.json
lib/microworld-memory/benchmarks/: AGENTS.md  MemoryBenchmark.cpp
lib/microworld-memory/benchmarks/Results/: AGENTS.md  Esp32S3N16R8.md  Host.md
lib/microworld-memory/include/: AGENTS.md
lib/microworld-memory/include/MicroWorld/: AGENTS.md
lib/microworld-memory/include/MicroWorld/Containers/: AGENTS.md  Span.h  StaticVector.h
lib/microworld-memory/include/MicroWorld/Delegates/: AGENTS.md  Delegate.h
lib/microworld-memory/include/MicroWorld/Memory/: AGENTS.md  FixedArena.h  MemoryResource.h  SharedPtr.h  UniquePtr.h
lib/microworld-memory/src/: AGENTS.md  MemoryResource.cpp
lib/microworld-memory/tests/: AGENTS.md  DelegateTests.cpp  MemoryTests.cpp
lib/microworld-net/: AGENTS.md  CMakeLists.txt  README.md  library.json
lib/microworld-net/benchmarks/: AGENTS.md
lib/microworld-net/benchmarks/Results/: AGENTS.md  Esp32S3N16R8.md  Host.md
lib/microworld-net/include/: AGENTS.md
lib/microworld-net/include/MicroWorld/: AGENTS.md
lib/microworld-net/include/MicroWorld/Net/: AGENTS.md  ByteReader.h  ByteWriter.h  FrameCodec.h  HostLoopback.h  NetAddress.h  NetDriver.h  NetHost.h  NetManager.h  NetPacketStorage.h  NetProtocol.h  NetResult.h
lib/microworld-net/src/: AGENTS.md  NetDriver.cpp
lib/microworld-net/tests/: AGENTS.md  ByteReaderTests.cpp  ByteWriterTests.cpp  FrameCodecTests.cpp  HostLoopbackTests.cpp  NetAllocationCounters.cpp  NetAllocationCounters.h  NetAllocationTests.cpp  NetHostTests.cpp  NetManagerTests.cpp  NetProtocolTests.cpp
lib/microworld-object/: AGENTS.md  CMakeLists.txt  library.json
lib/microworld-object/benchmarks/: AGENTS.md  GarbageCollectorBenchmark.cpp
lib/microworld-object/benchmarks/Results/: AGENTS.md  Esp32S3N16R8.md  Host.md
lib/microworld-object/include/: AGENTS.md
lib/microworld-object/include/MicroWorld/: AGENTS.md
lib/microworld-object/include/MicroWorld/Object/: AGENTS.md  ClassDescriptor.h  GarbageCollector.h  Object.h  ObjectHandle.h  ObjectPtr.h  ObjectStore.h
lib/microworld-object/src/: AGENTS.md  GarbageCollector.cpp  ObjectStore.cpp
lib/microworld-object/tests/: AGENTS.md  GarbageCollectorTests.cpp  ObjectStoreTests.cpp
lib/microworld-platform-host/: CMakeLists.txt
lib/microworld-platform-host/examples/TwoNodeDemo/: Main.cpp
lib/microworld-platform-host/include/MicroWorld/PlatformHost/: HostTimeSource.h  HostUdpDriver.h  UdpAddress.h  WinSockScope.h
lib/microworld-platform-host/src/: HostUdpDriver.cpp  UdpSocketGlue.h
lib/microworld-platform-host/tests/: HostNetEndToEndTests.cpp  HostTimeSourceTests.cpp  HostUdpDriverTests.cpp
lib/microworld/benchmarks/: AGENTS.md  DispatchBenchmark.cpp
lib/microworld/benchmarks/Results/: AGENTS.md  Esp32S3N16R8.md  Host.md
lib/microworld/docs/: AGENTS.md  ModulePackaging.md  Performance.md  Porting.md  ResourceBudgets.md  Style.md  UE5ConceptMap.md
lib/microworld/docs/decisions/: 0001-modular-runtime.md  0002-managed-memory.md  0002a-smart-pointer-foundation.md  AGENTS.md
lib/microworld/docs/diagrams/: AGENTS.md  microworld-c4-architecture.mmd  microworld-implementation-roadmap.mmd
lib/microworld/examples/: AGENTS.md
lib/microworld/examples/HostLifecycle/: AGENTS.md  Main.cpp
lib/microworld/include/: AGENTS.md
lib/microworld/include/MicroWorld/: AGENTS.md  Actor.h  ActorComponent.h  Application.h  Lifecycle.h  Log.h  Network.h  TickFunction.h  Tickable.h  Time.h  Version.h  World.h
lib/microworld/src/: AGENTS.md  Actor.cpp  ActorComponent.cpp  Application.cpp  Log.cpp  Network.cpp  TickFunction.cpp
lib/microworld/tests/: AGENTS.md  ApplicationNetworkTests.cpp  LogTests.cpp  TestMain.cpp  TestSupport.h  TickFunctionTests.cpp  WorldTests.cpp
lib/microworld/tests/consumer/: AGENTS.md  CMakeLists.txt  platformio.ini
lib/microworld/tests/consumer/src/: AGENTS.md  CMakeLists.txt  CoreConsumerProbe.h  EngineConsumerProbe.h  EngineEsp32Main.cpp  EngineNativeMain.cpp  Esp32BenchmarkMain.cpp  Esp32Main.cpp  MemoryConsumerProbe.h  MemoryEsp32Main.cpp  MemoryNativeMain.cpp  NativeMain.cpp  NetConsumerProbe.h  NetEsp32Main.cpp  NetNativeMain.cpp  ObjectConsumerProbe.h  ObjectEsp32Main.cpp  ObjectNativeMain.cpp  PlatformEsp32Main.cpp
lib/microworld/tools/: AGENTS.md  CheckClassDocumentation.py  CheckDependencyBoundaries.py  CheckFolderAgents.py  CheckProfileMap.py
src/: main.cpp
(+13 files in other folders)
